--- a/index.html
+++ b/index.html
@@ -3212,24 +3212,35 @@ async function addDeliveryMarkers() {
                         currentInfoWindow.close();
                     }
 
-                    // ✅ SOLUÇÃO DEFINITIVA: setCenter ao invés de panTo (SEM animação = SEM rotação)
-                    const currentHeading = map.getHeading() || 0;
-                    const currentTilt = map.getTilt() || 0;
+                    // Salvar orientação atual ANTES de qualquer ação
+                    const savedHeading = map.getHeading() || 0;
+                    const savedTilt = map.getTilt() || 0;
 
-                    // Centralizar instantaneamente (sem animação)
-                    map.setCenter(position);
+                    // Criar listeners temporários para TRAVAR rotação durante pan
+                    const headingListener = map.addListener('heading_changed', () => {
+                        if (map.getHeading() !== savedHeading) {
+                            map.setHeading(savedHeading);
+                        }
+                    });
 
-                    // Garantir que heading/tilt não mudaram
-                    if (map.getHeading() !== currentHeading) {
-                        map.setHeading(currentHeading);
-                    }
-                    if (map.getTilt() !== currentTilt) {
-                        map.setTilt(currentTilt);
-                    }
+                    const tiltListener = map.addListener('tilt_changed', () => {
+                        if (map.getTilt() !== savedTilt) {
+                            map.setTilt(savedTilt);
+                        }
+                    });
+
+                    // Centralizar suavemente no marcador
+                    map.panTo(position);
 
                     // Abrir InfoWindow
                     infoWindow.open(map, marker);
                     currentInfoWindow = infoWindow;
+
+                    // Remover listeners após 500ms (tempo suficiente para completar o pan)
+                    setTimeout(() => {
+                        google.maps.event.removeListener(headingListener);
+                        google.maps.event.removeListener(tiltListener);
+                    }, 500);
                 });
 
                 // Armazenar o marcador com a chave da coordenada
@@ -3254,24 +3265,35 @@ async function addDeliveryMarkers() {
                         currentInfoWindow.close();
                     }
 
-                    // ✅ SOLUÇÃO DEFINITIVA: setCenter ao invés de panTo (SEM animação = SEM rotação)
-                    const currentHeading = map.getHeading() || 0;
-                    const currentTilt = map.getTilt() || 0;
+                    // Salvar orientação atual ANTES de qualquer ação
+                    const savedHeading = map.getHeading() || 0;
+                    const savedTilt = map.getTilt() || 0;
 
-                    // Centralizar instantaneamente (sem animação)
-                    map.setCenter(position);
+                    // Criar listeners temporários para TRAVAR rotação durante pan
+                    const headingListener = map.addListener('heading_changed', () => {
+                        if (map.getHeading() !== savedHeading) {
+                            map.setHeading(savedHeading);
+                        }
+                    });
 
-                    // Garantir que heading/tilt não mudaram
-                    if (map.getHeading() !== currentHeading) {
-                        map.setHeading(currentHeading);
-                    }
-                    if (map.getTilt() !== currentTilt) {
-                        map.setTilt(currentTilt);
-                    }
+                    const tiltListener = map.addListener('tilt_changed', () => {
+                        if (map.getTilt() !== savedTilt) {
+                            map.setTilt(savedTilt);
+                        }
+                    });
+
+                    // Centralizar suavemente no marcador
+                    map.panTo(position);
 
                     // Abrir InfoWindow
                     infoWindow.open(map, marker);
                     currentInfoWindow = infoWindow;
+
+                    // Remover listeners após 500ms (tempo suficiente para completar o pan)
+                    setTimeout(() => {
+                        google.maps.event.removeListener(headingListener);
+                        google.maps.event.removeListener(tiltListener);
+                    }, 500);
                 });
 
                 // Armazenar o marcador com a chave da coordenada
@@ -6422,8 +6444,7 @@ async function showMatchedClientMarkers() {
 
             const infoWindow = new google.maps.InfoWindow({
                 content: infoWindowContent,
-                maxWidth: 300,
-                disableAutoPan: true
+                maxWidth: 300
             });
 
             try {
@@ -6437,29 +6458,12 @@ async function showMatchedClientMarkers() {
                     });
 
                     marker.addListener('click', () => {
-                        // Fechar InfoWindow anterior se existir
                         if (currentInfoWindow) {
                             currentInfoWindow.close();
                         }
-
-                        // ✅ SOLUÇÃO DEFINITIVA: setCenter ao invés de panTo (SEM animação = SEM rotação)
-                        const currentHeading = map.getHeading() || 0;
-                        const currentTilt = map.getTilt() || 0;
-
-                        // Centralizar instantaneamente (sem animação)
-                        map.setCenter(position);
-
-                        // Garantir que heading/tilt não mudaram
-                        if (map.getHeading() !== currentHeading) {
-                            map.setHeading(currentHeading);
-                        }
-                        if (map.getTilt() !== currentTilt) {
-                            map.setTilt(currentTilt);
-                        }
-
-                        // Abrir InfoWindow DEPOIS de centralizar
                         infoWindow.open(map, marker);
                         currentInfoWindow = infoWindow;
+                        map.panTo(position);
                     });
 
                     matchedClientMarkers[client.id] = marker;
@@ -6480,29 +6484,12 @@ async function showMatchedClientMarkers() {
                     });
 
                     marker.addListener('click', () => {
-                        // Fechar InfoWindow anterior se existir
                         if (currentInfoWindow) {
                             currentInfoWindow.close();
                         }
-
-                        // ✅ SOLUÇÃO DEFINITIVA: setCenter ao invés de panTo (SEM animação = SEM rotação)
-                        const currentHeading = map.getHeading() || 0;
-                        const currentTilt = map.getTilt() || 0;
-
-                        // Centralizar instantaneamente (sem animação)
-                        map.setCenter(position);
-
-                        // Garantir que heading/tilt não mudaram
-                        if (map.getHeading() !== currentHeading) {
-                            map.setHeading(currentHeading);
-                        }
-                        if (map.getTilt() !== currentTilt) {
-                            map.setTilt(currentTilt);
-                        }
-
-                        // Abrir InfoWindow DEPOIS de centralizar
                         infoWindow.open(map, marker);
                         currentInfoWindow = infoWindow;
+                        map.panTo(position);
                     });
 
                     matchedClientMarkers[client.id] = marker;
